<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote Car Control</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred? Login now.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_alerts">AlertsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
